Added profile info request/update to user router
